# dooeyflow

./: .gitignore  README.md  docker-compose.yml
.agents/: AGENTS.md  mcp_config.json  plugin.json
.claude/: CLAUDE.md
.gemini/: GEMINI.md  settings.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_social_login_fields.py  f30fe2a4c440_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  inventory.py  materials.py  menus.py  notifications.py  oauth.py  polling.py  stores.py  webhooks.py
backend/app/core/: config.py  database.py  idempotency.py  security.py
backend/app/models/: __init__.py  base.py  device_token.py  inventory_transaction.py  material.py  menu.py  recipe.py  store.py  toss_order.py  user.py
backend/app/schemas/: auth.py  common.py  inventory.py  material.py  menu.py  notification.py  recipe.py  store.py  webhook.py
backend/app/services/: auth_service.py  inventory_service.py  material_service.py  menu_service.py  notification_service.py  polling_service.py  social_auth_service.py  store_service.py  toss_client.py  webhook_service.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_inventory.py  test_materials.py  test_menus_recipes.py  test_models.py  test_notifications.py  test_polling.py  test_stores.py  test_units.py  test_webhooks.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  ENV.md  PRD.md  RUNBOOK.md  (+2 more)
(+109 files in other folders)
